H1 changes with Hello

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     <img src="img/rina.jpg" alt="Ini gambarnya mba Hacktiv8" />
     <img src="img/isa.png" alt="" /> -->
     <header>
-      <h1>Hai</h1>
+      <h1>Hello</h1>
       <h2>Hello</h2>
       <h3>Hello</h3>
       <h4>Hello</h4>
